<resources>
    <string name="app_name">BeFit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings used for buttons -->
    <string name="btn_errand">Zadanie</string>
    <string name="btn_day">Dzień</string>
    <string name="btn_options">Opcje</string>
    <string name="btn_info">Informacje</string>
    <string name="btn_ranking">Ranking</string>

    <!-- Strings used for Errands -->
    <string name="lbl_errand_description">Opis</string>
    <string name="lbl_errand_goal">CEL:</string>
    <string name="lbl_errand_goal_content">Zawartość celu</string>
    <string name="lbl_errand_result_points">Punkty: </string>
    <string name="lbl_errand_result_steps">Kroki: </string>
    <string name="lbl_errand_result_calories">Kalorie: </string>
    <string name="lbl_errand_result_time">Czas: </string>
    <string name="title_activity_test_menu">TestMenu</string>

</resources>
